Changed table from html to d3 table, added details seciton, working on criteria section

--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,19 @@ h1 {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+
+thead {
+    font-family: 'Segoe UI';
+    text-align: left;
+}
+
+.detailsStyle {
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+}
+
+.tableFormat {
+    margin: 10px;
+    /*float: left;*/
+}
