--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ th {
 h1 {
     font-family: 'Segoe UI';
     font-size: 40px;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
 
 tr:nth-child(even) {
@@ -37,6 +39,18 @@ thead {
 
 .tableFormat {
     margin-top: 10px;
-    margin-bottom: 10px;
-/*    float: left;*/
+    margin-bottom: 20px;
+    /*float: left;*/
+}
+
+mapouter {
+    float: right;
+}
+
+.detailsFormat {
+    float: left;
+}
+
+.scatterFormat {
+    /*float: right;*/
 }
